// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Search renders disabled 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-cSizRO fbZkjB"
    disabled={true}
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      medium
    </label>
    <input
      className="sc-joKenV giDeyQ"
      disabled={true}
      placeholder=" "
      type="search"
      value="Text"
    />
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-cSizRO fbZkjB"
    disabled={true}
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      large
    </label>
    <input
      className="sc-joKenV epIvjr"
      disabled={true}
      placeholder=" "
      type="search"
      value="Text"
    />
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-cSizRO fbZkjB"
    disabled={true}
  >
    <div
      className="sc-fduepK gIjyRP"
    >
      <input
        className="sc-joKenV ihpJux"
        disabled={true}
        placeholder=" "
        type="search"
        value="Text"
      />
      <label
        className="sc-cmvVVv keWJSg"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Search renders error 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      medium
    </label>
    <input
      className="sc-joKenV uPZDC"
      placeholder="e.g. EPL"
      type="search"
    />
    <p
      className="sc-QmDjo yJQM"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      large
    </label>
    <input
      className="sc-joKenV jEnnXl"
      placeholder="e.g. EPL"
      type="search"
    />
    <p
      className="sc-QmDjo yJQM"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <div
      className="sc-fduepK gIjyRP"
    >
      <input
        className="sc-joKenV fKIZtH"
        placeholder="e.g. EPL"
        type="search"
      />
      <label
        className="sc-cmvVVv keWJSg"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-QmDjo yJQM"
      role="alert"
    >
      Error message
    </p>
  </div>
</div>
`;

exports[`TextInput: type Search renders readOnly 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      medium
    </label>
    <input
      className="sc-joKenV giDeyQ"
      placeholder=" "
      readOnly={true}
      type="search"
      value="Read only text"
    />
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      large
    </label>
    <input
      className="sc-joKenV epIvjr"
      placeholder=" "
      readOnly={true}
      type="search"
      value="Read only text"
    />
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <div
      className="sc-fduepK gIjyRP"
    >
      <input
        className="sc-joKenV ihpJux"
        placeholder=" "
        readOnly={true}
        type="search"
        value="Read only text"
      />
      <label
        className="sc-cmvVVv keWJSg"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Search renders with hint 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      medium
    </label>
    <input
      className="sc-joKenV giDeyQ"
      placeholder="e.g. EPL"
      type="search"
    />
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      large
    </label>
    <input
      className="sc-joKenV epIvjr"
      placeholder="e.g. EPL"
      type="search"
    />
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <div
      className="sc-fduepK gIjyRP"
    >
      <input
        className="sc-joKenV ihpJux"
        placeholder="e.g. EPL"
        type="search"
      />
      <label
        className="sc-cmvVVv keWJSg"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Search renders with label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      medium
    </label>
    <input
      className="sc-joKenV giDeyQ"
      placeholder="e.g. EPL"
      type="search"
    />
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      large
    </label>
    <input
      className="sc-joKenV epIvjr"
      placeholder="e.g. EPL"
      type="search"
    />
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <div
      className="sc-fduepK gIjyRP"
    >
      <input
        className="sc-joKenV ihpJux"
        placeholder="e.g. EPL"
        type="search"
      />
      <label
        className="sc-cmvVVv keWJSg"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search renders with label RTL 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
      dir="rtl"
    >
      medium
    </label>
    <input
      className="sc-joKenV giDeyQ"
      dir="rtl"
      placeholder="e.g. EPL"
      type="search"
    />
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
      dir="rtl"
    >
      large
    </label>
    <input
      className="sc-joKenV epIvjr"
      dir="rtl"
      placeholder="e.g. EPL"
      type="search"
    />
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <div
      className="sc-fduepK gIjyRP"
    >
      <input
        className="sc-joKenV ihpJux"
        dir="rtl"
        placeholder="e.g. EPL"
        type="search"
      />
      <label
        className="sc-cmvVVv bXkXQL"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search renders without label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <input
      className="sc-joKenV giDeyQ"
      placeholder="medium"
      type="search"
    />
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <input
      className="sc-joKenV epIvjr"
      placeholder="large"
      type="search"
    />
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <div
      className="sc-fduepK gIjyRP"
    >
      <input
        className="sc-joKenV jimMqo"
        placeholder="xlarge"
        type="search"
      />
      <label
        className="sc-cmvVVv keWJSg"
      />
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search supports background colour 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      medium
    </label>
    <input
      className="sc-joKenV aKByj"
      placeholder="e.g. EPL"
      type="search"
    />
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      large
    </label>
    <input
      className="sc-joKenV fVMePs"
      placeholder="e.g. EPL"
      type="search"
    />
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <div
      className="sc-fduepK bLHNyM"
    >
      <input
        className="sc-joKenV ihpJux"
        placeholder="e.g. EPL"
        type="search"
      />
      <label
        className="sc-cmvVVv keWJSg"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;
